--- a/report.tex
+++ b/report.tex
@@ -1278,39 +1278,55 @@ for each $i\in\{1,\ldots,n\}$ and $\lambda\in\compositions$.
 
 In fact, $\phi$ is determined by its values on $e_1,\ldots,e_n$, $f_1,\ldots,f_n$ and $k_\lambda$ for $\lambda\in\compositions$. In order to describe the image of this map we introduce the notion of standard paths in $\Gamma$.
 
-\begin{definition}\label{def:standard-paths}
-A standard path in $\Gamma$ is a path of the following form:
+\begin{definition}\label{def:standard-positive-path}
+A path $p=k_\lambda p_1\cdots p_h$ with
 \begin{equation*}
-p = k_\mu p_1\cdots p_l\cdot p_1'\cdots p_l'
+p_s = e_{i+s-1}^{\alpha_{i,s}} e_{i+s-2}^{\alpha_{i-1,s}}\cdots e_{i+s-n}^{\alpha_{i-n+1,s}},
 \end{equation*}
-for some $l\in\naturals$, where
+for $s\in\{1,\ldots,h\}$, is a \emph{standard positive path} if
 \begin{equation*}
-p_s = e_{i_0+s-1}^{\alpha_{i_0,s}} e_{i_0+s-2}^{\alpha_{i_0-1,s}}\cdots e_{i_0+s-n}^{\alpha_{i_0-n+1,s}}
-\end{equation*}
-and
-\begin{equation*}
-p_s' = f_{i_1-s+1}^{\beta_{i_1,s}} f_{i_1-s+2}^{\beta_{i_1+1,s}}\cdots f_{i_1-s+n}^{\beta_{i_1+n-1,s}}
-\end{equation*}
-for $s\in\{1,\ldots,l\}$, determined by two collections of non-negative integers $(\alpha_{i,s})$ and $(\beta_{i,s})$, for $i\in\{1,\ldots,n\}$ and $s\in\{1,\ldots,l\}$, satisfying the following conditions:
-\begin{equation*}
-\alpha_{i,1}+\beta_{i-1,1} \le \mu_i,
+i = \max\{t:1\le t\le n, \lambda_t = 0\} - 1;
 \end{equation*}
 \begin{equation*}
-\alpha_{i,1}\geq \alpha_{i,2}\geq\cdots\geq \alpha_{i,l}\geq 0
+\alpha_{j,s}\geq \alpha_{j,s+1} \text{ for } s\in\{1,\ldots,h-1\};
 \end{equation*}
-and
 \begin{equation*}
-\beta_{i,1}\geq \beta_{i,2}\geq\cdots\geq \beta_{i,l}\geq 0,
-\end{equation*}
-for $i\in\{1,\ldots,n\}$; where
-\begin{equation*}
-i_0 = \max\{i:i\in\{1,\ldots,n\}\text{ with } \alpha_{i+1,s}=0\text{ for } s\in\{1,\ldots,l\}\}
-\end{equation*}
-and
-\begin{equation*}
-i_1 = \min\{i:i\in\{1,\ldots,n\}\text{ with } \beta_{i,s}=0\text{ for } s\in\{1,\ldots,l\}\}.
+0\le \alpha_{j,1}\le\lambda_j \text{ for } j\in\{1,\ldots,n\}.
 \end{equation*}
 \end{definition}
+
+\begin{definition}\label{def:standard-negative-path}
+A path $p=k_\lambda p_1\cdots p_h$ with
+\begin{equation*}
+p_s = f_{i-s+1}^{\beta_{i,s}}f_{i-s+2}^{\beta_{i+1,s}}\cdots f_{i-s+n}^{\beta_{i+n-1,s}},
+\end{equation*}
+for $s\in\{1,\ldots,h\}$, is a \emph{standard negative path} if
+\begin{equation*}
+i = \min\{t:1\le t\le n, \lambda_t=0\};
+\end{equation*}
+\begin{equation*}
+\beta_{j,s}\geq \beta_{j,s+1} \text{ for } s\in\{1,\ldots,h-1\};
+\end{equation*}
+\begin{equation*}
+0\le \beta_{j,s}\le\lambda_{j+1} \text{ for } j\in\{1,\ldots,n\}.
+\end{equation*}
+\end{definition}
+
+\begin{remark}
+The subindex $j$ in $e_j$ and $f_j$ and the subindex $j$ in $\alpha_{j,s}$ is regarded as an element of $\integers/{n\integers}$.
+\end{remark}
+
+\begin{definition}\label{def:standard-paths}
+A path $p=k_\lambda p^{+}p^{-}$ is a \emph{standard path} if $p^{+}$ is a standard positive path, $p^{-}$ is a standard negative path and
+\begin{equation*}
+\alpha_{j,s} + \beta_{j-1,s} \le \lambda_j
+\end{equation*}
+for $j\in\{1,\ldots,n\}$.
+\end{definition}
+
+\begin{remark}
+If $p$ is a standard path with $p=p'p''$ for some paths $p'$ and $p''$, then $p'$ is a standard path.
+\end{remark}
 
 Observe that the definition of standard paths includes the constant paths $k_\lambda$ for $\lambda\in\compositions$. Suppose $p$ is a standard path and $A\in\matrices$ with $\rho(p+\zerorelations)=e_A$, then there are the following linear relations between the exponents in the standard expression for $p$ and the entries of $A$:
 \begin{align*}
@@ -1325,6 +1341,18 @@ a_{i,i} &= \mu_i - \alpha_{i,1} -\beta_{i-1,1}.
 \end{align*}
 
 Thus there is a bijection between the set of standard paths in $\Gamma$ and the standard basis of the affine $q$-Schur algebra indexed by $\matrices$.
+
+\begin{definition}\label{def:reduced-path}
+A path is said to be \emph{reduced} if it is not equivalent to a shorter path.
+\end{definition}
+
+\begin{lemma}\label{lemma:standard-path-reduced}
+A standard path is reduced.
+\end{lemma}
+
+\begin{proof}
+{\color{red}COMPLETE THIS PROOF.}
+\end{proof}
 
 \begin{lemma}\label{lemma:image-of-standard-path}
 Let $A\in\matrices$ and let $p$ be the standard path associated to $A$. Then
